@@ -1,3 +1,12 @@
+2014-10-17  pads  <pads@myhouseyourhouse.net>
+
+    * src/net/yourhouse/myhouse/www/RadioApp.java:
+    * res/layout/main.xml:
+    - Add progress spinner to button when buffering.
+
+    * src/net/yourhouse/myhouse/www/RadioService.java:
+    - Refactor: Set show name from here in all scenarios.
+
 2014-09-08  pads  <pads@myhouseyourhouse.net>
 
     * src/net/yourhouse/myhouse/www/RadioApp.java:
